# Semantic-Delta-Protocol

./: .gitignore  .mnemignore  Cargo.toml  LICENSE  README.md
src/: error.rs  interner.rs  lib.rs  models.rs  protocol.rs
src/semantic/: chunker.rs  diff.rs  diff_tests.rs  fingerprint.rs  mod.rs  model.rs  queries.rs  registry.rs
