[package]
name = "semantic-delta-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.5.1"
chrono = "0.4.38"
anyhow = "1.0.82"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zstd = "0.13.3"
uuid = { version = "1.8", features = ["v4"] }
bytes = "1.6"
lasso = { version = "0.7", features = ["multi-threaded"] }
fastcdc = "3.1.0"
similar = { version = "2.5.0", features = ["inline"] }
streaming-iterator = "0.1.9"
rayon = "1.11.0"

tree-sitter = "0.24"
tree-sitter-rust = "0.21.2"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-md = "0.3"
